# introduction_to_python

./: README.md  memory_management.py  pyproject.toml
20240721_fundamentals_revision/: README.md  challenge_one.py  creating_a_bool.py  creating_a_float.py  creating_a_str.py  creating_an_int.py
20240728_booleans_and_if_else/: 002_comparison_operators_bool.py  003_logical_operators_bool.py  004_logical_comparison_combination_bool.py  005_negating_bool.py  006_checking_equality_bool.py  007_checking_inequality_bool.py  008_combining_logical_operators_bool.py  009_check_membership_bool.py  010_check_empty_values_bool.py  011_control_statements.py
20240825_arrays_and_bools/: 001_check_length_of_list.py  001a_check_length_of_list_again.py  002_check_number_is_even_or_odd.py  002a_check_if_number_is_less_than_six.py  002b_check_if_number_is_equal_to_5.py  002c_check_if_a_number_is_greater_than_six.py  003_check_if_list_is_even_or_odd_length.py  003a_check_if_length_of_list_is_more_than_5.py  004_access_item_in_list.py  005_get_center_index_of_a_list.py  README.md
20240901_advanced_list_practice/: README.md
20240906_data_types/: 001_defining_an_integer.py  002_add_two_numbers.py  004_multiply_two_numbers.py
20240907_advanced_lists/: 001_sorting_a_list_inplace.py  002_creating_a_list_way_one.py  003_creating_a_list_way_one_2.py  004_creating_a_list_way_two.py  005_creating_a_list_way_two_2.py  006_get_middle_number_in_list.py  007_get_75_percentile_of_sorted_list.py  008_median_of_odd_list.py  009_shuffle_your_list.py  010_shuffle_then_sort.py  README.md  (+3 more)
(+247 files in other folders)
